Se agregan detalles finales para el sprint 3, se borran archivos innncesarios y proyectoclases 2 tiene nuevas funciones

--- a/proyectoClases2/src/main/resources/templates/index.html
+++ b/proyectoClases2/src/main/resources/templates/index.html
@@ -6,22 +6,28 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-<h1>Hola mundo 2</h1>
-<button class="estilo-boton-uno">Hola</button>
-<button style="background-color: burlywood">Hola2</button>
-<input type="date">
-<br/>
-<br/>
-<input type="email">
-<br/>
-<br/>
-<input type="password">
-<br/>
-<br/>
-<a href="https://www.facebook.com">Link</a>
-<a href="/pagina2">Ir a pag 2</a>
+
+<main>
+
+    <div class="px-4 py-5 my-5 text-center">
+        <img class="d-block mx-auto mb-4" src="img/teamwork.png" alt="imagen personas" height="100">
+        <h1>App para personas</h1>
+
+        <div>
+            <p>Esta es una aplicación para gestionar personas</p>
+            <div>
+                <button type="button">Boton 1</button>
+                <button type="button">Boton 2</button>
+            </div>
+        </div>
+    </div>
+
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
